--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <li>
                             <img align="center" alt="HTML" height="30" width="40"
                                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                            <p>HTML5</p>
+                            <p>HTML</p>
                         </li>
                         <li>
                             <img align="center" alt="CSS" height="30" width="40"
