--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
                         <li>
                             <img align="center" alt="HTML" height="30" width="40"
                                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                            <p>HTML</p>
+                            <p class="sk">HTML</p>
                         </li>
                         <li>
                             <img align="center" alt="CSS" height="30" width="40"
                                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-                            <p>CSS</p>
+                            <p class="sk">CSS</p>
                         </li>
                         <li>
                             <img align="center" alt="Js" height="30" width="40"
                                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-                            <p>JavaScript</p>
+                            <p class="sk">JavaScript</p>
                         </li>
                     </ul>
                 </div>
@@ -118,19 +118,19 @@
                     <ul class="hobbies_lista">
                         <li>
                             <img src="./src/imagens/phone.png" alt="Fones de Ouvido">
-                            <p>Ouvir música</p>
+                            <p class="idhob">Ouvir música</p>
                         </li>
                         <li>
                             <img src="./src/imagens/tv.png" alt="Tv">
-                            <p>Assistir séries</p>
+                            <p class="idhob">Assistir séries</p>
                         </li>
                         <li>
                             <img src="./src/imagens/control.png" alt="Controle de video game">
-                            <p>Jogar videogame</p>
+                            <p class="idhob">Jogar videogame</p>
                         </li>
                         <li>
                             <img src="./src/imagens/pc.png" alt="Pc">
-                            <p>Práticar programação</p>
+                            <p class="idhob">Práticar programação</p>
                         </li>
                     </ul>
                 </div>
@@ -237,9 +237,9 @@
                 </div>
 
                 <!--   <div class="projeto">
-                <a href="#" target="_blank">
+                <a href="#urldoprojeto" target="_blank">
                     <img src="https://via.placeholder.com/515X700" alt="#">
-                    <h3>#</h3>
+                    <h3>#nomedoprojeto</h3>
 
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML,CSS e JavaScript</p>
