--- a/index.html
+++ b/index.html
@@ -152,22 +152,36 @@
                     </a>
                 </div>
 
-                <div class="projeto ativo">
-                    <a href="https://dodosantosbr.github.io/Mugiwara/" target="_blank">
-                        <img src="./src/imagens/projeto-one-piece.png" alt="Projeto One Piece" />
-                        <h3>Projeto One Piece</h3>
 
-                        <div class="informacoes-projeto">
-                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                            <p>🔗 Ver no GitHub Pages</p>
-                        </div>
-                    </a>
-                </div>
 
                 <div class="projeto ativo">
                     <a href="https://dodosantosbr.github.io/projeto-myheroacademia/" target="_blank">
                         <img src="./src/imagens/projeto-myheroacademia.png" alt="Projeto MyHeroAcademia">
                         <h3>Projeto My Hero </h3>
+
+                        <div class="informacoes-projeto">
+                            <p>Projeto feito usando HTML,CSS e JavaScript</p>
+                            <p>🔗 Ver no GitHub Pages</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://dodosantosbr.github.io/AgenciaLP/" target="_blank">
+                        <img src="./src/imagens/projeto-alp.png" alt="AgenciaLP">
+                        <h3>Agência LP</h3>
+
+                        <div class="informacoes-projeto">
+                            <p>Projeto feito usando HTML,CSS e JavaScript</p>
+                            <p>🔗 Ver no GitHub Pages</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://dodosantosbr.github.io/projeto-Garfield" target="_blank">
+                        <img src="./src/imagens/projeto-garfield.png" alt="Projeto Garfield">
+                        <h3>#nomedoprojeto</h3>
 
                         <div class="informacoes-projeto">
                             <p>Projeto feito usando HTML,CSS e JavaScript</p>
@@ -188,13 +202,15 @@
                     </a>
                 </div>
 
-                <div class="projeto">
-                    <a href="https://dodosantosbr.github.io/AgenciaLP/" target="_blank">
-                        <img src="./src/imagens/projeto-alp.png" alt="AgenciaLP">
-                        <h3>Agência LP</h3>
+
+
+                <div class="projeto ativo">
+                    <a href="https://dodosantosbr.github.io/Mugiwara/" target="_blank">
+                        <img src="./src/imagens/projeto-one-piece.png" alt="Projeto One Piece" />
+                        <h3>Projeto One Piece</h3>
 
                         <div class="informacoes-projeto">
-                            <p>Projeto feito usando HTML,CSS e JavaScript</p>
+                            <p>Projeto feito usando HTML, CSS e JavaScript</p>
                             <p>🔗 Ver no GitHub Pages</p>
                         </div>
                     </a>
@@ -235,18 +251,6 @@
                         </div>
                     </a>
                 </div>
-
-                <!--   <div class="projeto">
-                <a href="#urldoprojeto" target="_blank">
-                    <img src="https://via.placeholder.com/515X700" alt="#">
-                    <h3>#nomedoprojeto</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML,CSS e JavaScript</p>
-                        <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div> -->
 
                 <!--      <div class="projeto">
                 <a href="#" target="_blank">
