--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="projeto">
                     <a href="https://dodosantosbr.github.io/projeto-Garfield" target="_blank">
                         <img src="./src/imagens/projeto-garfield.png" alt="Projeto Garfield">
-                        <h3>#nomedoprojeto</h3>
+                        <h3>Projeto Garfield</h3>
 
                         <div class="informacoes-projeto">
                             <p>Projeto feito usando HTML,CSS e JavaScript</p>
