--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
         <h1>Olá! Sou Douglas Sales</h1>
         <p>Um desenvolvedor frontend em formação apaixonado por tecnologia.</p>
         <p>
-          Estou sempre me desafiando com novos projetos e buscando feedback na
-          comunidade de programação, além de compartilhar meus conhecimentos. 👨‍💻
-        </p>
-        <p>
-          Muito fã de jogos, filmes, séries e animes. No tempo livre faço uns
-          vídeos aleatórios. 😁
+          Desenvolvedor Frontend em formação, com foco em construir interfaces
+          eficientes, responsivas e bem estruturadas. Atualmente me dedico ao
+          aperfeiçoamento contínuo por meio de projetos práticos, estudos e
+          colaboração com a comunidade de tecnologia. 👨‍💻
         </p>
 
         <ul class="redes-sociais">
@@ -177,7 +175,6 @@
       <h2 class="titulo">Meus Projetos</h2>
 
       <div class="container-projetos">
-        <!-- Cada projeto abaixo está ok -->
         <div class="projeto ativo">
           <a href="https://dodosantosbr.github.io/projeto-gta/" target="_blank">
             <img
@@ -268,7 +265,7 @@
           </a>
         </div>
 
-        <div class="projeto">
+     <!--    <div class="projeto">
           <a
             href="https://dodosantosbr.github.io/projeto-lorax"
             target="_blank"
@@ -280,9 +277,9 @@
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="projeto">
+<!--         <div class="projeto">
           <a href="https://dodosantosbr.github.io/loja-pc/" target="_blank">
             <img
               src="./src/imagens/projeto-loja-pc.png"
@@ -294,9 +291,9 @@
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>
-        </div>
+        </div> -->
 
-        <div class="projeto">
+  <!--       <div class="projeto">
           <a
             href="https://dodosantosbr.github.io/projeto-avatar"
             target="_blank"
@@ -309,7 +306,7 @@
             </div>
           </a>
         </div>
-      </div>
+      </div> -->
 
       <button class="btn-mostrar-projetos">Mostrar Mais</button>
     </section>
