--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
   <body>
     <header class="cabecalho">
-      <a href="#">
-        <h1 class="logo">DS</h1>
-      </a>
-
+      <a href="#"><h1 class="logo">DS</h1></a>
       <nav class="menu">
         <ul>
           <li><a href="#info-sobre">+ Sobre Mim</a></li>
@@ -116,28 +113,28 @@
           <ul class="skills_tecnologias">
             <li>
               <img
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg"
                 alt="HTML"
                 height="30"
                 width="40"
-                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg"
               />
               <p class="sk">HTML</p>
             </li>
             <li>
               <img
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg"
                 alt="CSS"
                 height="30"
                 width="40"
-                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg"
               />
               <p class="sk">CSS</p>
             </li>
             <li>
               <img
+                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg"
                 alt="Js"
                 height="30"
                 width="40"
-                src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg"
               />
               <p class="sk">JavaScript</p>
             </li>
@@ -252,6 +249,23 @@
         </div>
 
         <div class="projeto ativo">
+          <a
+            href="https://dodosantosbr.github.io/casulocenter/"
+            target="_blank"
+          >
+            <img
+              src="./src/imagens/casulo.png"
+              alt="Projeto Casulo"
+            />
+            <h3>Casulo Center</h3>
+            <div class="informacoes-projeto">
+              <p>Projeto feito usando HTML, CSS e JavaScript</p>
+              <p>🔗 Ver no GitHub Pages</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="projeto ativo">
           <a href="https://dodosantosbr.github.io/Mugiwara/" target="_blank">
             <img
               src="./src/imagens/projeto-one-piece.png"
@@ -264,49 +278,7 @@
             </div>
           </a>
         </div>
-
-     <!--    <div class="projeto">
-          <a
-            href="https://dodosantosbr.github.io/projeto-lorax"
-            target="_blank"
-          >
-            <img src="./src/imagens/projeto-lorax.png" alt="Projeto Lorax" />
-            <h3>Projeto Lorax</h3>
-            <div class="informacoes-projeto">
-              <p>Projeto feito usando HTML, CSS e JavaScript</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>
-          </a>
-        </div> -->
-
-<!--         <div class="projeto">
-          <a href="https://dodosantosbr.github.io/loja-pc/" target="_blank">
-            <img
-              src="./src/imagens/projeto-loja-pc.png"
-              alt="Projeto Loja PC"
-            />
-            <h3>Projeto e-commerce</h3>
-            <div class="informacoes-projeto">
-              <p>Projeto feito usando HTML, CSS e JavaScript</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>
-          </a>
-        </div> -->
-
-  <!--       <div class="projeto">
-          <a
-            href="https://dodosantosbr.github.io/projeto-avatar"
-            target="_blank"
-          >
-            <img src="./src/imagens/projeto-avatar.png" alt="Projeto Avatar" />
-            <h3>Projeto Avatar</h3>
-            <div class="informacoes-projeto">
-              <p>Projeto feito usando HTML, CSS e JavaScript</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>
-          </a>
-        </div>
-      </div> -->
+      </div>
 
       <button class="btn-mostrar-projetos">Mostrar Mais</button>
     </section>
