Remove 'Desenvolvedor' from índex.html
Removed the word 'Desenvolvedor' from the paragraph.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           necessidades dos usuários em primeiro lugar.
         </p>
         <p>
-          Desenvolvedor Foco em construir interfaces
+          Foco em construir interfaces
           eficientes, responsivas e bem estruturadas.Minha jornada no
           desenvolvimento web me permitiu trabalhar em diversos projetos, desde
           sistemas de agendamento para salões de beleza até plataformas de
