Feat: Update WhatsApp link in index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </li>
           <li>
             <a
-              href="https://wa.link/aaowa6"
+              href="https://wa.link/ti68oy"
               title="Enviar mensagem no WhatsApp"
               target="_blank"
             >
