chore: atualizar index.html

--- a/index.html
+++ b/index.html
@@ -257,6 +257,23 @@
 
         <div class="projeto">
           <a
+            href="https://dodosantosbr.github.io/ecommerce-syntaxwear/"
+            target="_blank"
+          >
+            <img
+              src="./src/imagens/syntax.png"
+              alt="Projeto ecommerce-syntaxwear"
+            />
+            <h3>Projeto SyntaxWear</h3>
+            <div class="informacoes-projeto">
+              <p>Projeto feito usando HTML, CSS</p>
+              <p>🔗 Ver no GitHub Pages</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="projeto">
+          <a
             href="https://dodosantosbr.github.io/projeto-Garfield"
             target="_blank"
           >
