feat(skills): adiciona mini cards personalizados e atualiza imagens do portfólio

--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
           necessidades dos usuários em primeiro lugar.
         </p>
         <p>
-          Foco em construir interfaces
-          eficientes, responsivas e bem estruturadas.Minha jornada no
-          desenvolvimento web me permitiu trabalhar em diversos projetos, desde
-          sistemas de agendamento para salões de beleza até plataformas de
-          e-commerce completas.
+          Foco em construir interfaces eficientes, responsivas e bem
+          estruturadas. Minha jornada no desenvolvimento web me permitiu
+          trabalhar em diversos projetos, desde sistemas de agendamento para
+          salões de beleza até plataformas de e-commerce completas.
         </p>
         <p>
           Cada projeto é uma oportunidade de aprender, crescer e entregar valor
@@ -122,104 +121,75 @@
         <div class="skills">
           <h3 class="skills_titulo">Skills</h3>
           <ul class="skills_tecnologias">
-            <li>
+            <li class="card-skill">
               <img
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg"
                 alt="HTML"
-                height="30"
-                width="40"
               />
-              <p class="sk">HTML</p>
+              <p>HTML</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg"
                 alt="CSS"
-                height="30"
-                width="40"
               />
-              <p class="sk">CSS</p>
+              <p>CSS</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg"
-                alt="Js"
-                height="30"
-                width="40"
+                alt="JavaScript"
               />
-              <p class="sk">JavaScript</p>
+              <p>JavaScript</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-plain.svg"
-                alt="Ts"
-                height="30"
-                width="40"
+                alt="TypeScript"
               />
-              <p class="sk">TypeScript</p>
+              <p>TypeScript</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
                 alt="React"
-                height="30"
-                width="40"
               />
-              <p class="sk">React</p>
+              <p>React</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://icongr.am/devicon/git-original.svg?size=117&color=currentColor"
                 alt="Git"
-                height="30"
-                width="40"
               />
-              <p class="sk">Git</p>
+              <p>Git</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://icongr.am/devicon/postgresql-original.svg?size=117&color=currentColor"
-                alt="Psql"
-                height="30"
-                width="40"
+                alt="PostgreSQL"
               />
-              <p class="sk">PostgreSQL</p>
+              <p>PostgreSQL</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/prisma/prisma-original.svg"
                 alt="Prisma"
-                height="30"
-                width="40"
               />
-              <p class="sk">Prisma</p>
+              <p>Prisma</p>
             </li>
-            <li>
-              <img
-                src="https://www.vectorlogo.zone/logos/docker/docker-official.svg"
-                alt="Docker"
-                height="30"
-                width="40"
-              />
-              <p class="sk">Docker</p>
-            </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://icongr.am/devicon/express-original.svg?size=117&color=currentColor"
                 alt="Express"
-                height="30"
-                width="40"
               />
-              <p class="sk">Express</p>
+              <p>Express</p>
             </li>
-            <li>
+            <li class="card-skill">
               <img
                 src="https://www.vectorlogo.zone/logos/nodejs/nodejs-icon.svg"
                 alt="Node.Js"
-                height="30"
-                width="40"
               />
-              <p class="sk">Node.Js</p>
+              <p>Node.Js</p>
             </li>
           </ul>
         </div>
@@ -232,10 +202,7 @@
       <div class="container-projetos">
         <div class="projeto ativo">
           <a href="https://dodosantosbr.github.io/projeto-gta/" target="_blank">
-            <img
-              src="./src/imagens/projeto-gta.png"
-              alt="Projeto Landing Page GTA"
-            />
+            <img src="./src/imagens/gta.png" alt="Projeto Landing Page GTA" />
             <h3>Projeto GTA</h3>
             <div class="informacoes-projeto">
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -246,7 +213,7 @@
 
         <div class="projeto">
           <a href="https://dodosantosbr.github.io/AgenciaLP/" target="_blank">
-            <img src="./src/imagens/projeto-alp.png" alt="AgenciaLP" />
+            <img src="./src/imagens/agencia.png" alt="AgenciaLP" />
             <h3>Agência LP</h3>
             <div class="informacoes-projeto">
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -261,7 +228,7 @@
             target="_blank"
           >
             <img
-              src="./src/imagens/syntax.png"
+              src="./src/imagens/ecommerce.png"
               alt="Projeto ecommerce-syntaxwear"
             />
             <h3>Projeto SyntaxWear</h3>
@@ -277,13 +244,27 @@
             href="https://dodosantosbr.github.io/projeto-Garfield"
             target="_blank"
           >
-            <img
-              src="./src/imagens/projeto-garfield.png"
-              alt="Projeto Garfield"
-            />
+            <img src="./src/imagens/garfield.png" alt="Projeto Garfield" />
             <h3>Projeto Garfield</h3>
             <div class="informacoes-projeto">
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
+              <p>🔗 Ver no GitHub Pages</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="projeto ativo">
+          <a
+            href="https://dodosantosbr.github.io/projeto-pokedex/"
+            target="_blank"
+          >
+            <img src="./src/imagens/pokedex.png" alt="Projeto PokeDex" />
+            <h3>Projeto PokeDex</h3>
+            <div class="informacoes-projeto">
+              <p>
+                Projeto feito usando HTML, CSS e JavaScript, integração PokeAPI
+                para buscar dados de Pokémon.
+              </p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>
@@ -302,6 +283,7 @@
             </div>
           </a>
         </div>
+      </div>
 
       <button class="btn-mostrar-projetos">Mostrar Mais</button>
     </section>
